--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-<!doctype html><html lang="en"><head><meta charset="utf-8"/><link rel="icon" href="/favicon.ico"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="theme-color" content="#000000"/><meta name="description" content="One page about OP, testing..."/><link rel="apple-touch-icon" href="/logo192.png"/><link rel="manifest" href="/manifest.json"/><script src="https://kit.fontawesome.com/95419a64e9.js" crossorigin="anonymous"></script><title>OP focus</title><script defer="defer" src="/static/js/main.ce5dfe6a.js"></script><link href="/static/css/main.d47b2eda.css" rel="stylesheet"></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div></body></html>
+<!doctype html><html lang="zh, en"><head><meta charset="utf-8"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="theme-color" content="#000000"/><meta name="description" content="This website that focuses on OP Chains. 
+  The main aim of this website is to flatten OP content and provide faster 
+  location of information to users. Currently, the website is still in the testing
+   phase, and we appreciate any use or testing of the site. We are dedicated to 
+   increasing the website's security and complete transparency, and welcome 
+   any suggestions in this area. Although the site faces content compromise, 
+   it does not mean that the contents reflect personal views. ; 该网站的主要目的是展示OP内容并为用户提供更快的信息定位。
+   目前，该网站仍在测试阶段，您感谢任何使用或测试该网站的人。我们致力于提高网站的安全性和
+   完全透明度，欢迎任何相关建议。尽管该网站面临着内容妥协的问题，但并不意味着其中的内容
+   反映个人观点。"/><link rel="alternate" href="http://opfocus.github.io/#/en/index.html" hreflang="en"/><link rel="alternate" href="https://opfocus.github.io/#/zh/index.html" hreflang="zh"/><link rel="manifest" href="/manifest.json"/><script src="https://kit.fontawesome.com/95419a64e9.js" crossorigin="anonymous"></script><title>OP focus</title><script defer="defer" src="/static/js/main.950e0473.js"></script><link href="/static/css/main.9bad7922.css" rel="stylesheet"></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div></body></html>
